--- a/_includes/header.html
+++ b/_includes/header.html
@@ -36,7 +36,7 @@
 		  {% endif %}
 		  
 		  {% if include.type == "post" %}
-		  <span class="post-meta">Posted on {{ page.date | date: "%B %-d, %Y" }}</span>
+		  <span class="post-meta">发布于:{{ post.date | date: "%Y-%m-%-d"}}</span>
 		  {% endif %}
         </div>
       </div>
